test/fail/void4.min
program
    function void hello do return;
    function void stuff do return hello
start
end
